  - [02 Feb 00] In personal pages, relations are now displayed before notes.
  - [20 Jan 00] When sorting the children, use now the baptism date
    when there is no birth date.
  - [18 Jan 00] Fixed bug: when selecting no data base, the default page
    asks for a data base name, but in CGI mode when entering a data base,
    it did not work (incorrect URL).

* Gedcom to GeneWeb (ged2gwb)
  - [05 Feb 00] Added unused Gedcom tags (of indiduals) in notes.

* Base configuration files (base.gwf)
  - [25 Jan 00] Added variable "public_if_titles": if "yes", consider persons
    having nobility titles as public ("public" means that their private data
    is displayed even if their dates is less than 150 years). Warning: the
    default of this variable is "no": it is a behavior change in GeneWeb,
    relatively to previous versions (but don't worry: with this change, 
    private data is better protected).

* Lexicon (lang/lexicon.txt) and welcome pages (lang/*/start.txt)
  - [14 Feb 00] Changed the term "place" of nobility titles into "estate"
    ("domaine" in French), to avoid the confusion with the "place" of
    "birth", "death", and so on. Changed also "all the places" into
    "all the estates".
  - [01 Feb 00] Fixed some Swedish translations (Lars Gustavsson)
  - [26 Jan 00] Fixed several Portuguese translations (Jose Paulo Moitinho
    de Almeida).
  - [21 Jan 00] Changed the English displaying of dates into "day month
    year", the displaying "month day year" being specific to the United
    States and not used in other English speaking countries. American
    users are invited to change the lexicon line for (date) if they
    want an American display.    

* Documentation
  - [17 Feb 00] Added a new chapter "Keeping data divided inside a
    database" (written by Lars Gustavsson: thanks, Lars!). Only
    English version for the moment.
  - [11 Feb 00] Changed some Swedish files (Lars Gustavsson).